--- a/splash.yaml
+++ b/splash.yaml
@@ -1,14 +1,14 @@
 flutter_native_splash:
   color: "#FFFFFF"
   color_dark: "#272727"
-  image: assets/logos/store-logo.png
-  image_dark: assets/logos/store-logo.png
+  image: assets/logos/flutter_icon.png
+  image_dark: assets/logos/flutter_icon.png
 
   android_12:
     color: "#FFFFFF"
     color_dark: "#272727"
-    image: assets/logos/store-logo.png
-    image_dark: assets/logos/store-logo.png
+    image: assets/logos/flutter_icon.png
+    image_dark: assets/logos/flutter_icon.png
 
 
   web: false
